<resources>
    <string name="app_name_release">Floorball Manager</string>
    <string name="app_name_debug">Floorball DEBUG</string>
    <string name="frameRateLabel">"Frame rate: "</string>
    <string name="frameRateFormat">"%1$.3f fps (%2$d dropped)"</string>
    <string name="glesVersionLabel">"GLES version: "</string>
    <string name="glesVersionValue">"?"</string>
    <string name="toggleRecordingOn">Start recording</string>
    <string name="toggleRecordingOff">Stop recording</string>
    <string name="recDrawTwice">Rec: draw twice</string>
    <string name="recOffscreen">Rec: FBO blit x2</string>
    <string name="recFramebuffer">Rec: glBlitFramebuffer [hosed]</string>
    <string name="useBlitFramebuffer">Use glBlitFramebuffer() when recording</string>
    <string name="nowRecording">" [RECORDING]"</string>
    <string name="nowSaving">" [saving]"</string>
    <string name="update_new_version">Sovelluksen uusi versio on julkaistu. Nykyinen versiosi on vanhentunut ja se voi aiheuttaa epävakautta tai kaatuilua. Ladataanko uusi versio?</string>
    <string name="dd">pp</string>
    <string name="mm">kk</string>
    <string name="yyyy">vvvv</string>
    <string name="ok">OK</string>
    <string name="no">Ei</string>
    <string name="yes">Kyllä</string>
    <string name="next">Seuraava</string>
    <string name="previous">Edellinen</string>
    <string name="cancel">Peruuta</string>
    <string name="close">Sulje</string>
    <string name="save">Tallenna</string>
    <string name="select_picture">Vaihda kuva</string>
    <string name="left">Vasen</string>
    <string name="right">Oikea</string>
    <string name="position_lw">Vasen laitahyökkääjä</string>
    <string name="position_c">Keskushyökkääjä</string>
    <string name="position_rw">Oikea laitahyökkääjä</string>
    <string name="position_ld">Vasen puolustaja</string>
    <string name="position_rd">Oikea puolustaja</string>
    <string name="position_mv">Maalivahti</string>
    <string name="position_lw_short">VL</string>
    <string name="position_c_short">KH</string>
    <string name="position_rw_short">OL</string>
    <string name="position_ld_short">VP</string>
    <string name="position_rd_short">OP</string>
    <string name="position_mv_short">MV</string>
    <string name="clear">Tyhjennä</string>
    <string name="period">erä</string>
    <string name="line">kenttä</string>
    <string name="line_number">Kenttä %1$s</string>
    <string name="goal">maali</string>
    <string name="penalty">rangaistus</string>
    <string name="home">Koti</string>
    <string name="away">Vieras</string>
    <string name="opponent">Vastustaja</string>
    <string name="period_duration">Erän pituus</string>
    <string name="date">Päivämäärä</string>
    <string name="removed_player">Poistettu pelaaja</string>
    <string name="select">Valitse</string>
    <string name="stats">TILASTOT</string>
    <string name="edit">Muokkaa</string>
    <string name="remove">Poista</string>
    <string name="admin">Admin</string>
    <string name="player">Pelaaja</string>
    <string name="guest">Vierailija</string>
    <string name="founder">Perustaja</string>
    <string name="season">Tunniste</string>
    <string name="nothing">Ei mikään</string>
    <string name="overtime">Jatkoaika</string>
    <string name="send">Lähetä</string>
    <string name="klo">klo</string>
    <string name="remove_player">Poista pelaaja</string>
    <string name="remove_game">Poista ottelu</string>
    <string name="remove_goal">Poista maali</string>
    <string name="remove_penalty">Poista rangaistus</string>
    <string name="stats_games">Ottelut</string>
    <string name="stats_points">Pisteet</string>
    <string name="stats_goals">Maalit</string>
    <string name="stats_assists">Syötöt</string>
    <string name="stats_penalties">Jäähyt</string>
    <string name="stats_penalties_per_game">JM/O</string>
    <string name="stats_points_per_game">P/O</string>
    <string name="stats_goals_per_game">M/O</string>
    <string name="stats_assists_per_game">S/O</string>
    <string name="stats_plus_minus">+/-</string>
    <string name="stats_plus">+</string>
    <string name="stats_minus">-</string>
    <string name="stats_yv_abbr">YV</string>
    <string name="stats_av_abbr">AV</string>
    <string name="stats_rl_abbr">RL</string>
    <string name="stats_goals_abbr">M</string>
    <string name="stats_games_abbr">O</string>
    <string name="stats_assists_abbr">S</string>
    <string name="stats_points_abbr">P</string>
    <string name="stats_penalties_abbr">JM</string>
    <string name="select_picture_load_url">Lataa</string>
    <string name="select_picture_from_gallery">Valitse galleriasta</string>
    <string name="select_picture_from_camera">Ota kuva kameralla</string>
    <string name="select_picture_from_url">Kuvan url</string>
    <string name="select_picture_error">Kuvaa ei voitu ladata</string>
    <string name="select_picture_use_default">Käytä oletuskuvaa</string>
    <string name="game_add_event">Lisää tapahtuma</string>
    <string name="game_result_title">Ottelun lopputulos</string>
    <string name="game_result_too_low">Merkattuja maaleja on enemmän kuin annoit tulokseksi.</string>
    <string name="game_settings_no_lines">Aseta kentälliset.</string>
    <string name="game_settings_goalie">Aloittava maalivahti</string>
    <string name="game_settings_no_goalies">Ei maalivahteja.</string>
    <string name="game_settings_fill_both_times">Kellonaika on virheellinen.</string>
    <string name="title_teams">Joukkueet</string>
    <string name="title_add_team">Lisää joukkue</string>
    <string name="title_add_player">Lisää pelaaja</string>
    <string name="title_edit_team">Joukkueen tiedot</string>
    <string name="title_edit_player">Pelaajan tiedot</string>
    <string name="title_manage_players">Joukkueen pelaajat</string>
    <string name="title_settings">Asetukset</string>
    <string name="title_game_settings">Ottelun asetukset</string>
    <string name="title_lines">Kentälliset</string>
    <string name="title_lines_default">Kokoonpano</string>
    <string name="title_game">Ottelu</string>
    <string name="title_games">Pelatut ottelut</string>
    <string name="title_new_game">Uusi ottelu</string>
    <string name="title_team_settings">Joukkueen hallinta</string>
    <string name="title_player_stats">Pelaajan tilastot</string>
    <string name="title_team_stats">Joukkueen tilastot</string>
    <string name="title_inactive_players">Poistetut pelaajat</string>
    <string name="title_edit_user_connection">Jäsenen tiedot</string>
    <string name="title_search_team">Etsi joukkue</string>
    <string name="title_accept_user_request">Liitä käyttäjä joukkueeseen</string>
    <string name="title_players_stats">Pelaajatilastot</string>
    <string name="login_email">Sähköposti</string>
    <string name="login_password">Salasana</string>
    <string name="login_login">Kirjaudu</string>
    <string name="login_continue">Jatka</string>
    <string name="login_login_info">Kirjaudu</string>
    <string name="login_register_info">Rekisteröidy palveluun tallentaaksesi tietosi seuraavaa kertaa varten.</string>
    <string name="login_register">Rekisteröidy</string>
    <string name="login_back">Takaisin</string>
    <string name="login_new_user">Uusi käyttäjä? Luo tili</string>
    <string name="login_old_user">Oletko jo rekisteröitynyt? Kirjaudu</string>
    <string name="login_error_email">Sähköposti on virheellinen.</string>
    <string name="login_error_password">Salasanan on oltava vähintään 6 merkkiä.</string>
    <string name="login_error_email_in_use">Tämä sähköposti on jo käytössä.</string>
    <string name="login_error_invalid_credentials">Virheellinen salasana.</string>
    <string name="login_error_user_not_found">Sähköpostia ei löytynyt.</string>
    <string name="login_forgot_password">Unohditko salasanasi?</string>
    <string name="login_forgot_password_info">Lähetämme sähköpostiisi linkin salasanan vaihtamiseen.</string>
    <string name="login_forgot_password_sent">Tarkista sähköpostisi. Lähetimme ohjeet salasanan vaihtoon.</string>
    <string name="login_verification_sent">Lähetimme sähköpostiisi linkin, jolla tili täytyy vahvistaa. Voit kirjautua sisään vahvistamisen jälkeen.</string>
    <string name="login_email_not_verified">Sähköpostia ei ole vahvistettu. Haluatko lähettää vahvistusviestin sähköpostiisi?</string>
    <string name="team_selection_desc">Lisää tai valitse olemassa oleva joukkue.</string>
    <string name="team_selection_add_team">Lisää joukkue</string>
    <string name="team_selection_search_team">Etsi joukkue</string>
    <string name="team_selection_add_player">Lisää pelaaja</string>
    <string name="team_selection_user_request">Pyyntö odottaa joukkueeseen:</string>
    <string name="team_selection_user_invitation_team_removed">Joukkue on poistettu.</string>
    <string name="team_selection_user_invitation_info">Sinulle on uusia kutsuja! Näet ne profiilisivulta.</string>
    <string name="team_selection_user_invitation_admin">Kutsu Adminiksi joukkueeseen:</string>
    <string name="team_selection_user_invitation_player">Kutsu pelaajaksi joukkueeseen:</string>
    <string name="team_selection_user_invitation_guest">Kutsu vierailijaksi joukkueeseen:</string>
    <string name="team_selection_connection_not_found">Sinulla ei ole enää oikeuksia tähän joukkueeseen. Ota halutessasi yhteyttä joukkueen ylläpitäjään.</string>
    <string name="team_selection_already_selected">Tämä joukkue on jo valittuna.</string>
    <string name="season_settings_season_hint">Tunniste</string>
    <string name="team_settings_edit">Muokkaa joukkueen tietoja</string>
    <string name="team_settings_add_connection">Lisää jäsen</string>
    <string name="team_settings_connections">Jäsenet:</string>
    <string name="team_settings_remove_team">Poista joukkue</string>
    <string name="team_settings_invitation_status">Kutsun tilat:</string>
    <string name="team_settings_pending">Kutsu lähetetty.</string>
    <string name="team_settings_connected">Käyttäjä liitetty.</string>
    <string name="team_settings_deny">Kutsu hylätty.</string>
    <string name="team_settings_removed_players">Poistetut pelaajat</string>
    <string name="best_lines_title">Parhaat kentälliset</string>
    <string name="best_lines_position_title">Pelaajan sallittu pelipaikka</string>
    <string name="best_lines_position_any">Mikä tahansa pelipaikka</string>
    <string name="best_lines_position_sides">Hyökkääjät ja puolustajat</string>
    <string name="best_lines_position_own">Pelaajalle merkattu pelipaikka</string>
    <string name="best_lines_position_best">Laskettu paras pelipaikka</string>
    <string name="best_lines_chemistry_title">Kentällisten jaottelu</string>
    <string name="best_lines_chemistry_best_line">Paremmuusjärjestys</string>
    <string name="best_lines_chemistry_best_team">Paras joukkueen kemia</string>
    <string name="best_lines_games_title">Otanta</string>
    <string name="best_lines_analyze">Analysoi</string>
    <string name="settings_teams">Joukkueet</string>
    <string name="settings_invite">Kutsu kavereita</string>
    <string name="settings_link_more">Lisää sovelluksia</string>
    <string name="settings_link_rate">Arvostele sovellus</string>
    <string name="settings_change_password">Vaihda salasana</string>
    <string name="settings_log_out">Kirjaudu ulos</string>
    <string name="settings_version">Versio: %1$s</string>
    <string name="settings_copyright">Copyright &#169; Arde Apps</string>
    <string name="settings_link_privacy">Tietosuojakäytäntö</string>
    <string name="settings_logged_user">Kirjauduttu käyttäjänä</string>
    <string name="settings_requests">Pyynnöt:</string>
    <string name="settings_invitations">Kutsut:</string>
    <string name="settings_feedback">Anna palautetta!</string>
    <string name="icon_solid">fa-solid.ttf</string>
</resources>