<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_third"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_background_second">

        <TextView
            android:id="@+id/nameHeader"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/player"
            android:textColor="@color/color_text_light_secondary"
            android:textSize="16sp"
            android:padding="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/gamesHeader"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/stats_games_abbr"
                android:textColor="@color/color_text_light_secondary"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/plusHeader"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/stats_plus"
                android:textColor="@color/color_text_light_secondary"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/minusHeader"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/stats_minus"
                android:textColor="@color/color_text_light_secondary"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/plusMinusHeader"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/stats_plus_minus"
                android:textColor="@color/color_text_light_secondary"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/goalsHeader"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/stats_goals_abbr"
                android:textColor="@color/color_text_light_secondary"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/assistsHeader"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/stats_assists_abbr"
                android:textColor="@color/color_text_light_secondary"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/pointsHeader"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/stats_points_abbr"
                android:textColor="@color/color_text_light"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
    <ListView
        android:id="@+id/playerList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"
        android:dividerHeight="3dp" />
</LinearLayout>