<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userRequestsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/settings_requests"
            android:textColor="@color/color_text_light"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/userJoinRequestsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/userInvitationsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/settings_invitations"
            android:textColor="@color/color_text_light"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/userInvitationsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical" />

        <Button
            android:id="@+id/teamsButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/button_background"
            android:text="@string/settings_teams"
            android:textColor="@color/color_text_light" />

        <View
            android:id="@+id/teamsDivider"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/color_text_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/settings_logged_user"
            android:textColor="@color/color_text_light"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="-"
            android:textColor="@color/color_text_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/changePasswordButton"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_background"
                android:text="@string/settings_change_password"
                android:textColor="@color/color_text_light" />

            <Button
                android:id="@+id/logOutButton"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/settings_log_out"
                android:textColor="@color/color_text_light" />
        </LinearLayout>

        <Button
            android:id="@+id/feedbackButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/button_background"
            android:text="@string/settings_feedback"
            android:textColor="@color/color_text_light" />

        <Button
            android:id="@+id/inviteButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/button_background"
            android:text="@string/settings_invite"
            android:textColor="@color/color_text_light" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/color_menu"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:src="@drawable/google_play_icon" />

            <TextView
                android:id="@+id/rateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="20dp"
                android:text="@string/settings_link_rate"
                android:textColor="@color/color_url_link"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/moreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/settings_link_more"
                android:textColor="@color/color_url_link"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/versionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/settings_version"
                android:textColor="@color/color_text_light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/settings_copyright"
                android:textColor="@color/color_text_light" />

            <TextView
                android:id="@+id/privacyPolicyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/settings_link_privacy"
                android:textColor="@color/color_url_link"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
