<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/curve_shape"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/season"
        android:textColor="@color/color_text_light"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/tagEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:focusableInTouchMode="true"
        android:hint="@string/season_settings_season_hint"
        android:inputType="textCapWords"
        android:maxLength="250"
        android:textColor="@color/color_text_light"
        android:textColorHint="@color/color_text_hint" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="@drawable/button_background"
        android:text="@string/save"
        android:textColor="@color/color_text_light"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>